--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,6 +1,8 @@
 label.application_title=NutriDiab - Gestione Visite
 label.pazienti=Pazienti
-label.cerca_paziente=Cerca Paziente
-label.nuovo_paziente=Nuovo Paziente
+label.cerca=Cerca
+label.registra_paziente=Registra paziente
 label.medici=Medici
+label.registra_medico=Registra medico
 label.visite=Visite
+label.registra_visita=Registra visita
